--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cybercraft-frontend",
+  "name": "chatapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.0",
     "redux": "^5.0.1",
     "tailwindcss": "^4.0.14"
   },
